# python12-subinterpreters

./: Cargo.toml  Pipfile  README.md  pyproject.toml
examples/: simple.py
src/: lib.rs
