[package]
name = "subinterpreters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "subinterpreters"
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.49"
unindent = "0.2.3"
pyo3 = { version = "0.19", features = ["auto-initialize"] }

[patch.crates-io]
pyo3-ffi = { git = "https://github.com/ChillFish8/pyo3.git" }